<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="FB_MHS" Id="{8dbd2b76-3574-4caf-b0f9-7c13bd743840}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MHS


VAR
	m_csStateRequest : MHS_STATE;
	m_csStateRequestOld : MHS_STATE;
	m_csState : MHS_STATE;
	m_csStateLastCycle : MHS_STATE;
	m_csStateLastAction : MHS_STATE;
	m_Name : STRING;	
	// Von SystemDemonstratorApp kommend
	m_iWorkpiece : DINT; 
	m_iCell : DINT;
	m_iRequest: DINT;
	// Von SystemDemonstratorApp kommend angenommen
	m_iWorkpieceAccepted : DINT; 
	m_iCellAccepted : DINT;
	m_iRequestAccepted: DINT;
	
	// Von PLC kommend 
	m_iMachineFree : DINT;	
	
	
	//Von MiR kommend
	m_iRequestMachineFree : DINT;
	m_iActionTerminated : DINT;	
	
	
	
	// Zustand der Zelle die Beladen oder Entladen werden soll
	m_eCurrentCellState : CELL_ACTION_STATE;
	m_eNeededCellState : CELL_ACTION_STATE;
	m_bNeededCellStatePending : BOOL;
	
	aMHS : ARRAY [1..20] OF DINT; // Interface API-Array
	
	
	m_iSimulationsTimer : DINT;
	
	///////////////////////////////////////////////////////////////////////////
	
	bGet, bPut   	: BOOL;
	

	
	fbClient				:  FB_IotHttpClient :=(sHostName:='jsonplaceholder.typicode.com',
								  	bKeepAlive:=TRUE, tConnectionTimeout:=T#10S);
								
	fbGet						:ARRAY [1..10] OF FB_Get;
	fbPut						:ARRAY [11..20] OF FB_PUT; 
	/////////////////////////////////////////////////////////////////////////////
	//*Hami* String Replace for URi
	
	s_URI : STRING  			:= '/posts/xx';
	i_Register	  				: INT ;
	s_i_Register				: STRING;
	S_Register_URi				: STRING;
	I							: INT ;
	i_I							: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[StateMachine();
//FOR i_Register:=1 TO 10  DO
//	i_Register := i_Register + 1;
//	s_i_Register := INT_TO_STRING(i_Register);
//	S_Register_URi := REPLACE(s_URI , s_i_Register , 2 , 8 );
	
//	I := I +1;
	
// END_FOR 

//IF NOT fbClient.bConfigured THEN 
//		fbClient.nHostPort:= 80;
//	END_IF 


/////////////////////////////////////////////////////////////////////////////////////////		

IF fbClient.bConfigured THEN 
		fbGet[1](bSend:=bGet,sURi := '/posts/1', fbClient:=fbClient);
		fbPut[11](bSend:=bPut,sURi := '/posts/1', fbClient:=fbClient);
END_IF

/////////////////////////////////////////////////////////////////////////////////////////		

IF fbClient.bConfigured THEN 
		fbGet[2](bSend:=bGet,sURi := '/posts/2', fbClient:=fbClient);
		fbPut[12](bSend:=bPut,sURi := '/posts/2', fbClient:=fbClient);
END_IF

/////////////////////////////////////////////////////////////////////////////////////////		

IF fbClient.bConfigured THEN 
		fbGet[3](bSend:=bGet,sURi := '/posts/3', fbClient:=fbClient);
		fbPut[13](bSend:=bPut,sURi := '/posts/3', fbClient:=fbClient);
END_IF

/////////////////////////////////////////////////////////////////////////////////////////		

IF fbClient.bConfigured THEN 
		fbGet[4](bSend:=bGet,sURi := '/posts/4', fbClient:=fbClient);
		fbPut[14](bSend:=bPut,sURi := '/posts/4', fbClient:=fbClient);
END_IF
/////////////////////////////////////////////////////////////////////////////////////////		

IF fbClient.bConfigured THEN 
		fbGet[5](bSend:=bGet,sURi := '/posts/5', fbClient:=fbClient);
		fbPut[15](bSend:=bPut,sURi := '/posts/5', fbClient:=fbClient);
END_IF


	fbClient.Execute();
	

	///////////////////////////// init client parameters at startup////////////////////////////////////
	
	

///////////////////////// SET MHS Connection///////////////////////////
// init client parameters at startup

/////////////////////////////////////////////////////////////////////
(*aMHS[1] := fbGet[1].q_iRegister;
aMHS[2] := fbGet[2].q_iRegister;
aMHS[3] := fbGet[3].q_iRegister;
aMHS[4] := fbGet[4].q_iRegister;
aMHS[5] := fbGet[5].q_iRegister;
aMHS[6] := fbGet[6].q_iRegister;
aMHS[7] := fbGet[7].q_iRegister;
aMHS[8] := fbGet[8].q_iRegister;
aMHS[9] := fbGet[9].q_iRegister;
aMHS[10] := fbGet[10].q_iRegister; 
*)

FOR I:=1 TO 10 DO
	aMHS[I] := fbGet[I].q_iRegister;
END_FOR


FOR i_I:=11 TO 20 DO
	fbPut[I].i_iRegister := aMHS[I];
END_FOR]]></ST>
    </Implementation>
    <Method Name="GetActionFinished" Id="{f9be7ecf-0863-4e63-90a9-70e274cc014b}">
      <Declaration><![CDATA[METHOD GetActionFinished : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF m_csState = MHS_STATE.e_AKTION_FINISHED THEN
	GetActionFinished := TRUE;
ELSE
	GetActionFinished := FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetCurrentCellForAction" Id="{4e44ab37-8541-4c04-a2d4-da5c7ddc1aee}">
      <Declaration><![CDATA[METHOD GetCurrentCellForAction : DINT
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetCurrentCellForAction := m_iCellAccepted;]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetState" Id="{0c787692-2a89-4490-bcc3-c552ee46f945}">
      <Declaration><![CDATA[METHOD GetState : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="NeededCellStatePending" Id="{75fc0899-153c-4f2a-98d5-fef47531f760}">
      <Declaration><![CDATA[METHOD NeededCellStatePending : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[NeededCellStatePending := m_bNeededCellStatePending;
m_bNeededCellStatePending := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="RequestAction" Id="{4fb005f0-d02e-46b3-af04-20c920bee9f0}">
      <Declaration><![CDATA[METHOD RequestAction : BOOL
VAR_INPUT
	
	iWorkpiece : DINT; 
	iCell : DINT;
	bRequest : DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
m_iWorkpiece :=  iWorkpiece;
m_iCell := iCell;
m_iRequest := bRequest;]]></ST>
      </Implementation>
    </Method>
    <Method Name="RequestState" Id="{6f0cadee-0cfd-4f8f-841b-9ebfd10fafc3}">
      <Declaration><![CDATA[METHOD RequestState : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="SendNeededToCell" Id="{453ef2a4-4d82-4c50-9123-dfd20ebadc81}">
      <Declaration><![CDATA[METHOD SendNeededToCell : CELL_ACTION_STATE
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SendNeededToCell := m_eNeededCellState;]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetClampIsOpen" Id="{0684070b-5c3a-4819-b58e-41f8879c40d8}">
      <Declaration><![CDATA[METHOD SetClampIsOpen : BOOL
VAR_INPUT
iClampIsOpen : DINT;	

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//IF iClampIsOpen > 0 THEN
//	m_iClampIsOpen := 1;
//	m_iClampIsClose := 0;
//ELSE
//	m_iClampIsOpen := 0;
//	m_iClampIsClose := 1;	
//END_IF

]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetDoorIsOpen" Id="{a39b49ff-e836-4e6f-98f4-4d420e6f19ca}">
      <Declaration><![CDATA[METHOD SetDoorIsOpen : BOOL
VAR_INPUT
	iDoorIsOpen :DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//IF iDoorIsOpen > 0 THEN
//	m_iDoorIsOpen := 1;
//	m_iDoorIsClose := 0;
//ELSE
//	m_iDoorIsOpen := 0;
//	m_iDoorIsClose := 1;	
//END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetMachineFree" Id="{968ec4a9-1952-43f2-be10-74ca8c23f480}">
      <Declaration><![CDATA[METHOD SetMachineFree : BOOL
VAR_INPUT
	iMachineFree:DINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[m_iMachineFree := iMachineFree; ]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetStateCurrentMachineForAction" Id="{91803e75-0a84-4e47-93b9-db4e209a463d}">
      <Declaration><![CDATA[METHOD SetStateCurrentMachineForAction : BOOL
VAR_INPUT
	eCurrentCellState :CELL_ACTION_STATE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[m_eCurrentCellState := eCurrentCellState;

SetStateCurrentMachineForAction := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="StateMachine" Id="{3635840f-1684-426a-8ea2-8add2027ff6e}">
      <Declaration><![CDATA[
METHOD StateMachine : BOOL
VAR_INPUT
END_VAR

VAR

END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
	// VOM MHS

	//{define Simulated}
	{define MHSConnected}
	
	{IF defined (MHSConnected)}
 	m_iRequestMachineFree   := aMHS[11];
	m_iActionTerminated :=  aMHS[12];
	{END_IF}
	// PLC interne Variablen
	//m_iDoorIsOpen : DINT;	
	//m_iClampIsOpen : DINT;
	//m_iClampIsClose : DINT;	
	//m_iDoorIsClose : DINT;


	
	
CASE m_csState OF

MHS_STATE.e_IDLE: 

	IF m_iWorkpiece > 0 AND m_iCell > 0 AND m_iRequest > 0 THEN
		m_iWorkpieceAccepted := m_iWorkpiece;  
		m_iCellAccepted := m_iCell;
		m_iRequestAccepted:= m_iRequest; 	
	END_IF

	IF m_iWorkpieceAccepted > 0 AND m_iCellAccepted > 0 AND m_iRequestAccepted = 2 THEN
		aMHS[1] := m_iWorkpieceAccepted;
		aMHS[2] := m_iCellAccepted;
		aMHS[3] := m_iRequestAccepted;
		m_iWorkpiece := 0;
 		m_iCell := 0;
		m_iRequest := 0;
		m_csState := MHS_STATE.e_PGO_POS;	
	END_IF
	IF m_iWorkpieceAccepted > 0 AND m_iCellAccepted > 0 AND m_iRequestAccepted = 1 THEN
		aMHS[1] := m_iWorkpieceAccepted;
		aMHS[2] := m_iCellAccepted;
		aMHS[3] := m_iRequestAccepted;
		m_iWorkpiece := 0;
 		m_iCell := 0;
		m_iRequest := 0;
		m_csState := MHS_STATE.e_GGO_POS;	
	END_IF
	// Löschen dieser Anforderung
	m_iRequestAccepted := 0;


// SUBROUTINE WP in Maschine bringen	  
MHS_STATE.e_PGO_POS:
	
 	IF m_iRequestMachineFree > 0 THEN
		m_eNeededCellState := CELL_ACTION_STATE.e_LoadPos;
		m_bNeededCellStatePending := TRUE;
		m_csState := MHS_STATE.e_PWAIT_DOOR;
	END_IF
	

MHS_STATE.e_PWAIT_DOOR:	
  	IF  m_eCurrentCellState = CELL_ACTION_STATE.e_LoadPos THEN
		//aMHS[3] := 0;//m_iRequest;
		m_iMachineFree := 1;
		m_csState := MHS_STATE.e_PWAIT_CLAMP;
	END_IF

MHS_STATE.e_PWAIT_CLAMP:
		m_csState := MHS_STATE.e_PPUT_WP;
	

MHS_STATE.e_PPUT_WP:
		m_csState := MHS_STATE.e_PCLOSE_CLAMP;
		
 MHS_STATE.e_PCLOSE_CLAMP:
			m_csState := MHS_STATE.e_PLEAFE_MACHINE;
	 
MHS_STATE.e_PLEAFE_MACHINE:
 	IF m_iActionTerminated > 0 THEN
		m_csState := MHS_STATE.e_AKTION_FINISHED;
	END_IF	

// SUBROUTINE WP aus Maschine holen	  
MHS_STATE.e_GGO_POS:
 	IF m_iRequestMachineFree > 0 THEN
		m_eNeededCellState := CELL_ACTION_STATE.e_UnLoadPos;
		m_bNeededCellStatePending := TRUE;
		m_csState := MHS_STATE.e_GWAIT_DOOR;
	END_IF

	
MHS_STATE.e_GWAIT_DOOR:
  	IF  m_eCurrentCellState = CELL_ACTION_STATE.e_UnLoadPos THEN
		m_iMachineFree := 1;
		//aMHS[3] := 0;//m_iRequest;
		m_csState := MHS_STATE.e_GWAIT_CLAMP;
	END_IF

MHS_STATE.e_GWAIT_CLAMP:
	//IF m_iClampIsOpen > 0 THEN
		m_csState := MHS_STATE.e_GGET_WP;
	//END_IF
MHS_STATE.e_GGET_WP:
	//IF 	m_iClampCloseRequest > 0 THEN
		m_csState := MHS_STATE.e_GCLOSE_CLAMP;
	//END_IF
 MHS_STATE.e_GCLOSE_CLAMP:
 	//IF m_iClampIsClose > 0 THEN
			m_csState := MHS_STATE.e_GLEAFE_MACHINE;	 
 	//END_IF
MHS_STATE.e_GLEAFE_MACHINE:
	
 	IF m_iActionTerminated > 0 THEN
		aMHS[3] := 0;//m_iRequest;
		m_csState := MHS_STATE.e_AKTION_FINISHED;
	END_IF		

MHS_STATE.e_AKTION_FINISHED:
	m_csState := MHS_STATE.e_IDLE;
	m_iMachineFree := 0;
	
MHS_STATE.e_ERROR:
	
ELSE
	m_csState := MHS_STATE.e_ERROR;
 
END_CASE
{IF defined (MHSConnected)}
aMHS[4] :=  m_iMachineFree; 
{END_IF}]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_MHS">
      <LineId Id="9" Count="0" />
      <LineId Id="172" Count="1" />
      <LineId Id="176" Count="1" />
      <LineId Id="232" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="295" Count="0" />
      <LineId Id="181" Count="0" />
      <LineId Id="311" Count="3" />
      <LineId Id="426" Count="0" />
      <LineId Id="424" Count="0" />
      <LineId Id="315" Count="5" />
      <LineId Id="326" Count="19" />
      <LineId Id="347" Count="6" />
      <LineId Id="325" Count="0" />
      <LineId Id="324" Count="0" />
      <LineId Id="321" Count="0" />
      <LineId Id="491" Count="0" />
      <LineId Id="310" Count="0" />
      <LineId Id="217" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="197" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="561" Count="8" />
      <LineId Id="159" Count="0" />
      <LineId Id="570" Count="0" />
      <LineId Id="552" Count="1" />
      <LineId Id="571" Count="0" />
      <LineId Id="551" Count="0" />
      <LineId Id="415" Count="0" />
      <LineId Id="417" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="573" Count="1" />
    </LineIds>
    <LineIds Name="FB_MHS.GetActionFinished">
      <LineId Id="5" Count="1" />
      <LineId Id="8" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.GetCurrentCellForAction">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.GetState">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.NeededCellStatePending">
      <LineId Id="5" Count="1" />
    </LineIds>
    <LineIds Name="FB_MHS.RequestAction">
      <LineId Id="9" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="18" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.RequestState">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.SendNeededToCell">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.SetClampIsOpen">
      <LineId Id="6" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="2" />
      <LineId Id="17" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.SetDoorIsOpen">
      <LineId Id="6" Count="5" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.SetMachineFree">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.SetStateCurrentMachineForAction">
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_MHS.StateMachine">
      <LineId Id="382" Count="129" />
      <LineId Id="228" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>